--- a/6. css grid/layout.html
+++ b/6. css grid/layout.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>Header</header>
-    <main>Content</main>
-    <nav>Navigation Bar</nav>
+    <main>COntent</main>
+    <nav>Navigation bar</nav>
     <aside>Sidebar</aside>
     <div class="sidebar2">Sidebar2</div>
     <footer>Footer</footer>
