--- a/JavaScript/10.scope oops/index.html
+++ b/JavaScript/10.scope oops/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    Hello.!!!
     <!-- <script src="script.js"></script> -->
-    <!-- <script src="code.js"></script> -->
-    <script src="shadowing.js"></script>
+    <!-- <script src="this.js"></script> -->
+    <script src="chaining.js"></script>
 </body>
 </html>
